Beginning of the path modifications for the jar compiled version.